src/test/deca/syntax/valid/homemade/test/test_pars_val_while.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction while.
//
// Resultats:
//    3
//    4
//
// Historique:
//    cree le 01/01/2023


{
    int x = 3;
    while (x < 5 ){
        println(x);
        x = x+1;
    }
}