src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_field_2_expr_apres_egal.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (only one expr after "=")
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    protected int x = 3 456;
}